--- a/dev/style/messagesPanel.css
+++ b/dev/style/messagesPanel.css
@@ -3,8 +3,8 @@
     display: inline-block;
     width: 100%;
     height: 100%;
-    justify-content: center;
     line-height: 1.5em;
+    margin: 0;
     overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -94,6 +94,7 @@ main {
     margin: 0.5%;
     padding: 1%;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 #list-chat > li {
