--- a/dev/style/style.css
+++ b/dev/style/style.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     overflow-x: hidden;
     width: 100%;
-    margin-top: 80px;
+    margin: 80px 0 0;
     justify-content: left;
     background-color: white;
     transition: background-color 0.7s ease, color 0.7s ease;
@@ -260,15 +260,21 @@ main > .profile-back > a {
     height: auto;
 }
 
-.div-advert {
+#random-post-container .div-advert, .div-advert {
     border: 2px solid rgb(67, 142, 218);
+    border-radius: 15px;
     margin: 2% auto;
-    padding: 1% 20px 2%;
-    width: 70%;
+    padding: 1% 20px;
+    width: 50%;
     height: auto;
     text-align: center;
-    background-color: rgb(152, 152, 152);
-    color: white;
+    background-color: lightgray;
+    color: black;
+}
+
+#random-post-container .div-advert {
+    width: 90%;
+    padding: 1% 0;
 }
 
 .post-card > .post-row {
@@ -286,7 +292,7 @@ main > .profile-back > a {
 }
 
 .card:not(.post-card) {
-    width: 60%;
+    width: 50%;
     border: 1px solid lightslategray;
     border-radius: 15px;
     margin: 5%;
